@startuml
'https://plantuml.com/class-diagram

class AddItemController {
-TextField Name
-DatePicker date
-TextArea description
-SceneSwap swap

void SwitchToListViewer(ActionEvent)
}

class StartupScreenController{

-Button create
-Button loadAll
-SceneSwap swap

+onCreatePush(ActionEvent)
+onLoadAllPush(ActionEvent)

}

class CreateNewListScreenController {
-TextField nameInput
-Button submitButton
-SceneSwap swap

+onButtonPush(ActionEvent)
}

class ConfirmDeleteController {
-Button confirmButton
-Button cancelButton
-SceneSwap swap

+onConfirmClick(ActionEvent)
+onCancelClick(ActionEvent)
}

class ConfirmListDeleteController {
-Button confirmButton
-Button cancelButton
-SceneSwap swap

+onConfirmClick(ActionEvent)
+onCancelClick(ActionEvent)
}

class EditListController
{
-SceneSwap swap
-button submitButton
-TextField nameInput
-ToDoList tempList

+setTempList(ToDoList)
+onButtonPush(ActionEvent)

}

class CatalogScreenController {

-TableView table
-TableColumn nameColumn
-TableColumn sizeColumn
-SceneSwap swap
-ToDoList selectedList
-ArrayList<ToDoList> allLists


+initialize()

+getCatalogLists()
+changeName(String, ToDoList)
+setAllLists(Catalog)
+deleteList()
+deleteList(ToDoList)
-setSelected(int)
+addList(ToDoList)

+saveListButton(ActionEvent)
+saveAllListsButton(ActionEvent)
+renameButton(ActionEvent)
+newButton(ActionEvent)
+deleteButton(ActionEvent)
}

class ListViewerController {

-TextField listName
-TableView<ToDoItem> table
-TableColumn listNamesColumn
-tableColumn completeColumn
-CheckBox completed
-TextArea itemDescription
-TextField itemDate
-TextField itemName
-SceneSwap swap
-int currentView
-ToDoItem selectedItem
-ArrayList<ToDoItem> allItems

+(ArrayList<ToDoItem>) getList()
+initialize()
+setList(ToDoList)
-setSelected(int)
+deleteItem()
-showItem(ToDoItem)
+seeAllItems(ActionEvent)
+SeeOnlyCompleteItems(ActionEvent)
+SeeOnlyIncompleteItems(ActionEvent)
+returnToLists(ActionEvent)
+deleteItem(ActionEvent)
+editSelectedItem(ActionEvent)
+newItemButton(ActionEvent)

}



class SceneSwap {
-Stage stage
-Scene scene
-Parent root


+SceneSwap()
+SwitchToAddItemScreen(ActionEvent)
+SwitchToCatalogScreen(ActionEvent)
+SwitchToConfirmDelete(ActionEvent)
+SwitchToConfirmListDelete(ActionEvent)
+SwitchToCreateNewList(ActionEvent)
+SwitchToListViewer(ActionEvent)
+SwitchToStartupScreen(ActionEvent)
+SwitchToEditListScreen(ActionEvent)

}

class ToDoItem {
-SimpleStringProperty name
-SimpleStringProperty description
-LocalDate date
-boolean complete

+String getName()
+void setName(String)
+String getDate()
+void setDate(LocalDate)
+String getDesc()
+void setDesc(String)
+String isComplete()
+void setComplete(String)

+ToDoItem(String, String, LocalDate)
+String toString()
}

class ToDoList {
-SimpleStringProperty name
-ArrayList<ToDoItem> list
-SimpleStringProperty size

+String getName()
+void setName(String)
+String getSize()
+setSize(String)
+ArrayList<ToDoItem> getAllItems()
+setAllItems(ArrayList<String>)

+ToDoList(String)

+void addItem(ToDoItem)
+void removeItem(ToDoItem)
+void editItem(ToDoItem,ToDoItem)
-void updateSize()

+toString()
}

class Catalog {
-ArrayList<ToDoList> catalog
-int listSize

+void addList(ToDoList)
+void deleteList(ToDoList)
+void editListName(String, String)

+ArrayList<String> getCatalog()
-void updateSize()
+void getCatalog()
+setCatalog(ArrayList<String>)
+getListSize()
+setListSize(int)
+void addList(ToDoList)
+void deleteList(ToDoList)
+void editList(String,String)

+Catalog()
}

class ToDoApplication {
+start(Stage)
+main()
}

class DataUtil {
-File file

+DataUtil(String)

+Catalog loadLists()
+boolean saveAll(Catalog)
+boolean saveOne(ToDoList)
-itemExists(ToDoItem,ToDoList)
-listExists(ToDoList,Catalog)

}

class FileUtil {
+makeDirector()
+File getDirectory()
+BufferedReader makeReader(String)
+BufferedWriter makeWriter(String, boolean)
+writeToFile(String, String)
+appendToFile(String, String)
+File getOutput(String)

}

Catalog *-- ToDoList
ToDoList *-- ToDoItem

note "File Utility Classes" as n1
n1 . DataUtil
n1 .. FileUtil

note "Scene Swaps" as n2
n2 .-. AddItemController
n2 .. CatalogScreenController
n2 .-. ConfirmDeleteController
n2 .-. ConfirmListDeleteController
n2 .- CreateNewListScreenController
n2 .-. ListViewerController
n2 .. StartupScreenController
n2 . SceneSwap
n2 .. EditListController

@enduml